# ww2_assistant

./: .coverage  .device_seed  .env  .gitee-ci.yml  .gitee-go.yml  .gitignore  .install_time  .trial  Flet本地APK构建完整教程.md  GITEE_CI_GUIDE.md  README.md  accept_licenses.bat  accept_licenses.ps1  accept_licenses_powershell.ps1  activate_gitee_pipeline.md  auto_install_flutter.ps1  backup_plan.md  build_apk.py  build_apk_fixed.py  build_apk_full.py  build_apk_simple.py  build_error.txt  build_log.txt  check_apk_paths.py  check_build_progress.ps1  check_build_status.py  check_env.py  check_gitee_access.py  check_gitee_artifacts.py  check_gitee_pipeline_guide.md  check_gitee_setup.py  check_gitee_status.py  configure_flutter.ps1  debug_build.py  debug_gitee_build.py  diagnose_build_path.py  download_links.html  enable_gitee_actions.md  final_build_check.py  fix_and_build_apk.py  (+72 more)
.arts/: launch.json  settings.json  tasks.json
.trae/: test-integration.json  模块化开发与技能配置完全指南.md
AI产物/: AI产物目录管理方案.md  README.md  索引.json
下拉框测试/: README.md  下拉框_合格版.py  建筑选项.py  建筑配置.json  最终成果说明.md  测试_完整配置.py  测试_视觉修复.py
前端/: README.md  test_card.py  test_card_color.py  test_color.py  test_content_bgcolor.py  test_dpi_fix.py  test_flet.py  test_layout_bgcolor.py  test_main_structure.py  test_minimal.py  test_nav_bgcolor.py  test_nav_class.py  test_nav_class_direct.py  test_no_bgcolor.py  test_no_icon.py  test_no_padding.py  test_simple_class.py  test_simple_layout.py  test_simple_nav.py  test_stack_layout.py  test_theme.py  test_with_events.py  test_zindex.py  windows11_main.py  导航设计方案.md  (+2 more)
(+768 files in other folders)
