[tool.poetry]
name = "ww2_assistant"
version = "0.1.0"
description = "二战风云游戏辅助工具"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.82.0"
pytest = "^9.0.2"
pytest-cov = "^7.13.4"
pytest-html = "^4.2.0"
coverage = "^7.13.4"
allure-pytest = "^2.15.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["测试"]
addopts = ["-v", "--tb=short"]

[tool.flet]
product = "二战风云"
